<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/ex_success"
        android:textColor="@color/red"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/ed_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/ed_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:minWidth="300dp"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:hint="@string/ed_id_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:minWidth="300dp"
        android:maxLines="1"
        android:paddingStart="10dp"
        android:hint="@string/ed_ps_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_id" />


    <Button
        android:id="@+id/bt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login_register"
        app:layout_constraintEnd_toStartOf="@id/bt_login"
        app:layout_constraintStart_toStartOf="@id/ed_password"
        app:layout_constraintTop_toBottomOf="@id/ed_password"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login_login"
        app:layout_constraintEnd_toEndOf="@id/ed_password"
        app:layout_constraintStart_toEndOf="@id/bt_register"
        app:layout_constraintTop_toBottomOf="@id/ed_password"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>






































